syntax = "proto3";

package github.com.jailtonjunior94.go.challenge;

option go_package = "/protofiles;pb";

message CepRequest {
  string cep = 1;
}

message LocationResponse {
  float lat = 1;
  float lng = 2;
}

message CepResponse {
  string cep = 1;
  string street = 2;
  string complement = 3;
  string neighborhood = 4;
  string city = 5;
  string uf = 6;
  LocationResponse location = 7;
}

service CepService {
  rpc GetCep(CepRequest) returns (CepResponse) {};
}